ingress/ingress-wear.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths:
      - backend:
        serviceName: wear-service
        serevicePort: 80
  - host: watch.my-online-store.com
    http:
      paths:
      - backend:
        serviceName: watch-service
        serevicePort: 80
